# parsepy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  apply.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml
src/parse_sdk/: __init__.py  _http.py  _types.py  client.py  exceptions.py  object.py  user.py
tests/: conftest.py
tests/unit/: test_client.py  test_http_extra.py  test_http_sync.py  test_object.py  test_object_sync.py  test_types_and_exceptions.py  test_user_auth.py
