[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsepy"
version = "0.1.0-dev"
description = "SDK Python moderne et maintenu pour Parse Server"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Kether-Labs Parse Server Python SDK Contributors" }
]
keywords = ["parse", "parse-server", "backend", "sdk", "baas", "rest"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.25.0",
  "pydantic>=2.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
django = ["django>=4.0"]
fastapi = ["fastapi>=0.100", "python-multipart>=0.0.6"]
flask = ["flask>=3.0"]
all = [
  "django>=4.0",
  "fastapi>=0.100",
  "python-multipart>=0.0.6",
  "flask>=3.0",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "respx>=0.20",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "types-requests",
]

[project.urls]
Homepage = "https://github.com/Kether-Labs/parsepy"
Repository = "https://github.com/Kether-Labs/parsepy"
Issues = "https://github.com/Kether-Labs/parsepy/issues"
Changelog = "https://github.com/Kether-Labs/parsepy/blob/main/CHANGELOG.md"

# --- Hatch (build) ---
[tool.hatch.build.targets.wheel]
packages = ["src/parse_sdk"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/parse_sdk --cov-report=term-missing --cov-fail-under=50"

# --- Coverage ---
[tool.coverage.run]
source = ["src/parse_sdk"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

# --- Black ---
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

# --- Ruff ---
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "ARG",  # flake8-unused-arguments
  "SIM",  # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["parse_sdk"]

# --- Mypy ---
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
